# dinbrief

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  README  README.md  pyproject.toml  setup.py  test.py  test_requirements.txt
dinbrief/: constants.py  document.py  optional_django.py  styles.py  template.py
dinbrief/contrib/: form.py  qrcode.py  simple.py
dinbrief/invoice/: __init__.py  bank_transfer_form.py  invoice.py  item.py  item_table.py  total_table.py  vat_item.py
dinbrief/locale/de/LC_MESSAGES/: django.mo  django.po
