[tool.poetry]
name = "dinbrief"
version = "0.4.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
license = "BSD OR MIT OR Apache-2.0"
readme = "README.md"
description = "PDF renderer for DIN 5008 and DIN 676 compliant letters and invoices"
keywords = ["dinbrief", "DIN", "5008", "676", "brief", "letter", "invoice", "pdf"]
repository = "https://github.com/bikeshedder/dinbrief"
homepage = "https://github.com/bikeshedder/dinbrief"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
reportlab = "^4.0.4"
qrcode = "^7.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
