[tool.poetry]
name = "dinbrief"
version = "0.5.1"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
license = "BSD OR MIT OR Apache-2.0"
readme = "README.md"
description = "PDF renderer for DIN 5008 and DIN 676 compliant letters and invoices"
keywords = ["dinbrief", "DIN", "5008", "676", "brief", "letter", "invoice", "pdf"]
repository = "https://github.com/bikeshedder/dinbrief"
homepage = "https://github.com/bikeshedder/dinbrief"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^4.0.4"
qrcode = "^8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
